syntax = "proto3";

message WsClientMsg {
  string auth_token = 1;
}

message WsServerMsg {
  bytes data = 2;
}

message PubsubMsg {
  repeated string topics = 1;
  bytes data = 2;
  string msg_props_json = 3;
}